# pyNB

./: .gitignore  .pybiomart.sqlite  NestBoot.m  PERFORMANCE_COMPARISON_GENERATED.md  PERFORMANCE_SCRIPTS_README.md  README.md  README_OOP.md  benchmark_nestboot_lasso_lsco_n50_matlab_replica.py  generate_matlab_results.m  generate_python_results.py  main.py  matlab_benchmark_all_methods.m  matlab_benchmark_nestboot.m  pyNB.py  pyNB_comprehensive_application_note.md  pyNB_simple_app_note.md  pyproject.toml  pytest.ini  python_benchmark_all_methods.py  python_benchmark_nestboot.py  requirements.txt  scenic_net.csv  scenic_net.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: pytest.yml
benchmark/: enhanced_performance_system.py  generate_matlab_results.m  generate_performance_report.py  generate_python_results.py  python_benchmark_results.csv  python_lasso_simple_medium_results.json  python_lsco_nestboot_medium_results.json  python_lsco_simple_medium_results.json  python_summary.json  test_enhanced_system.py  test_performance_report.py
benchmark/benchmark_results/: matlab_benchmark_results.csv  matlab_summary.json  python_benchmark_results.csv  (+1 more)
benchmark_results/: python_lasso_nestboot_medium_results.json
docs/: GRN_bootstrap_chapter.md  PERFORMANCE_SYSTEM_SUMMARY.md  README.md  SCENIC+ chapter.md  pyGS_very_simple_app.md  pyNB_comprehensive_application_note.md  pyNB_simple_app_note.docx  pyNB_simple_app_note.wd.docx  scenic_demo.ipynb
examples/: basic_usage.py  improved_oop_demo.py  run_workflow.py  scenic_plus_integration.py
output/: results.txt
src/: __init__.py  config.py  integration.py  oop.py  test_import.py
tests/: conftest.py  test_all_methods.py  test_basic.py  test_bootstrap.py  test_enhanced.py  test_enhanced_fixed.py  test_network_bootstrap.py  test_scenicplus_wrapper.py  test_simple.py  test_web.py  test_webdata.py
(+81 files in other folders)
