[project]
name = "pynb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.7.4",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scanpy>=1.11.5",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "PyYAML",
    "snakemake",
    "pulp<2.8",
]

[tool.uv.workspace]
members = [
    "project",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
